--- a/cache-server/package.json
+++ b/cache-server/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.6.1",
+    "ec2-publicip": "^1.0.4",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "typescript": "^4.3.2",
