--- a/cache-server/package.json
+++ b/cache-server/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "cache-server",
-  "version": "1.0.0",
-  "description": "An implementation of an in memory cache server",
-  "main": "dist/app.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node .",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RonGissin/aws-dist-cache.git"
-  },
-  "author": "Ron Gissin, Noam Isachar",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/RonGissin/aws-dist-cache/issues"
-  },
-  "homepage": "https://github.com/RonGissin/aws-dist-cache#readme",
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.18.0",
-    "@aws-sdk/util-dynamodb": "^3.18.0",
-    "@types/express": "^4.17.12",
-    "@types/node": "^15.6.1",
-    "aws-sdk": "^2.931.0",
-    "ec2-publicip": "^1.0.4",
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "typescript": "^4.3.2",
-    "util": "^0.12.3"
-  }
+	"name": "cache-server",
+	"version": "1.0.0",
+	"description": "An implementation of an in memory cache server",
+	"main": "dist/app.js",
+	"scripts": {
+		"build": "tsc",
+		"start": "node .",
+		"test": "jest"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/RonGissin/aws-dist-cache.git"
+	},
+	"author": "Ron Gissin, Noam Isachar",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/RonGissin/aws-dist-cache/issues"
+	},
+	"homepage": "https://github.com/RonGissin/aws-dist-cache#readme",
+	"dependencies": {
+		"@aws-sdk/client-dynamodb": "^3.18.0",
+		"@aws-sdk/util-dynamodb": "^3.18.0",
+		"@types/bluebird": "^3.5.35",
+		"@types/express": "^4.17.12",
+		"@types/node": "^15.6.1",
+		"aws-sdk": "^2.931.0",
+		"express": "^4.17.1",
+		"fs": "0.0.1-security",
+		"node-fetch": "^2.6.1",
+		"typescript": "^4.3.2",
+		"util": "^0.12.3"
+	}
 }
