--- a/cache-server/package.json
+++ b/cache-server/package.json
@@ -27,6 +27,7 @@
 		"aws-sdk": "^2.931.0",
 		"express": "^4.17.1",
 		"fs": "0.0.1-security",
+		"node-ec2-metadata": "0.0.5",
 		"node-fetch": "^2.6.1",
 		"typescript": "^4.3.2",
 		"util": "^0.12.3"
